<resources>
    <string name="app_name">YourPlace</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="comp1_name">Your</string>
    <string name="comp2_name">Place</string>

    <!--Descriptions-->
    <string name="image_description">Company Logo</string>

    <!--Button Strings-->
    <string name="book_appointment">Book Appointment</string>
    <string name="contact_us">Contact us</string>
    <string name="Price">Price</string>
    <string name="about_us">About us</string>
    <string name="staff">Staff</string>
    <string name="appointments">Appointments</string>

    <!--nav_header strings-->
    <string name="company_name">Your Place</string>

    <!--Log in strings-->
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="log_in">Log in</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>

    <!--Nav drawer-->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!--Company stuff-->
    <string name="company_address">PK Slaveykov 148, Burgas</string>
    <string name="company_phone">(+359) 87 720 2777</string>
    <string name="company_email">service@yourplace.bg</string>

    <!--About us-->
    <string name="company_about_us">The concept of our studio is to make you feel luxurious, together with my colleagues Tsveti (manicure and make-up) and Rayna (therapist) of 5 years we have made this happen. Through the years developing, learning and exploring, we realized that we have made Your Place your second home of pleasantries. We invite you to be our guests!"
</string>
</resources>
