<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        app:srcCompat="@drawable/companylogo" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView6"
        android:layout_marginTop="26dp"
        android:layout_toEndOf="@+id/textView6"
        android:text="@string/comp2_name"
        android:textColor="@android:color/holo_purple"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView3"
        android:layout_below="@+id/imageView4"
        android:layout_marginStart="12dp"
        android:layout_marginTop="23dp"
        android:text="@string/comp1_name"
        android:textColor="@android:color/holo_purple"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView7"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/company_address"
        android:textColor="@android:color/holo_purple"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="49dp"
        android:text="@string/company_phone"
        android:textColor="@android:color/holo_purple"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="17dp"
        android:text="@string/company_email"
        android:textColor="@android:color/holo_purple"
        android:textSize="20sp" />


</RelativeLayout>