<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:id="@+id/fragmentMain">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:contentDescription="@string/image_description"
        app:srcCompat="@drawable/companylogo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/imageView2"
        android:layout_below="@+id/imageView2"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:text="@string/comp1_name"
        android:textColor="@android:color/holo_purple"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView"
        android:layout_marginTop="43dp"
        android:layout_toEndOf="@+id/textView"
        android:text="@string/comp2_name"
        android:textColor="@android:color/holo_purple"
        android:textSize="50sp" />
</RelativeLayout>